app/stylesheets/main.scss
/* ... */
.contact_data_table table {
  margin-bottom: 0;
}

.contact_data_table tbody {
  background: none;
  border: none;
}

.contact_data_table td {
  padding: 1em;
}

.contact_data_table tr:nth-child(even) {
  background: none;
}

.contact_data_table .contact_icon {
  padding-right: 0.5em;
  text-align: right;
}

.contact_data_table .contact_info {
  padding-left: 0;
  padding-top: 1.4em;
}

.contact_button a {
  width: 100%;
  margin: 0;
}

.decorations2 {
  position: absolute;
  top: 0;
  z-index: 10;
}

#curved-lines {
    position: absolute;
    max-width: none;
    width: 100vw;
    top: -100vw;
    transform: translateY(-50vh);
}
#big-lines {
    position: absolute;
    max-width: none;
    height: 100vh;
    top: -100vh;
    left: -6.866vh;
    transform: translateX(50vw);
}
#small-lines {
    position: absolute;
    max-width: none;
    height: 100vh;
    top: -100vh;
    left: -6.866vh;
    transform: translateX(50vw);
}

.featureTitle {
  text-transform: uppercase;
  font-weight: bold;
  font-size: 120%;
}

.featureIcon:hover, .featureTitle:hover {
  cursor: pointer;
}

.solar {
  width: 1px;
  border-spacing: 0;
  border-collapse: collapse;
  opacity: 0.1;
}

.array {
  padding: 0;
  perspective: 250px;
}

.panel {
  width: 40px;
  height: 40px;
  background-color: white;
  margin: 25px 25px 45px 25px;
}

#solararrayContainer {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 30;
}

.form-input:placeholder-shown {
  text-transform: uppercase;
  opacity: 1.0;
  background-color: rgba(255, 255, 255, 0.5);
  color: white;
  padding-left: 0.7em;
  padding-top: 0.85em;
}
.form-input::-webkit-input-placeholder{
  color: white;
}
input:-moz-placeholder {
  color: white;
}
.form-input:focus {
  border: 2px solid rgb(0, 75, 145);
  padding-left: 0.57em;
  padding-top: 0.75em;
  background-color: rgba(255, 255, 255, 0.5);
}
.form-input {
  box-shadow: none;
  background-color: rgba(255, 255, 255, 0.5);
  // border: none;
  color: rgb(0, 75, 145);
  padding-left: 0.7em;
  padding-top: 0.85em;
  margin-bottom: 2px;
}

.form-error.is-visible {
  margin-top: 5px;
  margin-bottom: 0;
}

.columns-space {
  margin-top: 1em;
}

#bericht {
  height: 6em;
}

#form-buttons {
  text-align: right;
  margin-top: 1em;
  margin-right: 1em;
}

.vertical-center {
  display: block;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

.no-padding {
  padding: 0;
}

@media #{$small-only} {
  .cloud {
    opacity: 0.5;
  }
}

@media #{$medium-only} {
  .cloud {
    opacity: 0.5;
  }
}

.cloud1 {
  position: absolute;
  max-height: 100vh;
  width: auto;
  z-index: 50;
  right: 0;
  top: 50vh;
  transform: translateY(-50%);
}

.cloud2 {
  position: absolute;
  max-height: 60vh;
  width: auto;
  z-index: 50;
  left: -30vh;
  top: -25vh;
}

.cloud3 {
  position: absolute;
  max-height: 70vh;
  width: auto;
  z-index: 50;
  right: 0;
  bottom: -10vh;
}

.cloud4 {
  position: absolute;
  max-height: 100vh;
  width: auto;
  z-index: 50;
  left: 0;
  top: 50vh;
  transform: translateY(-50%);
}

.cloud5 {
  position: absolute;
  max-height: 50vh;
  width: auto;
  z-index: 50;
  right: 5vw;
  bottom: 0;
}

.email-success {
  color: #fff;
  background-color: rgba(225, 250, 234, 0.6) !important;
  display: none;
  margin-top: 20px;
}
.email-fail {
  color: #fff;
  background-color: rgba(236, 38, 38, 0.8) !important;
  display: none;
  margin-top: 20px;
}

.codestar-button[type="reset"] {
  margin-right: 3px;
}

